# lambdas

exercises/: CMakeLists.txt  alphabet.cpp  area.cpp  dangling.cpp  threeWays.cpp
homework/schedule/: CMakeLists.txt  main.cpp  schedule.hpp
homework/schedule/tests/: tests-bonus.cpp  tests.cpp
